delete topic handler
